<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rutina"
    tools:context=".rutinaM">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="61dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="71dp"
        android:text="@string/rutina"
        android:textColor="@color/rutina"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnregresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="151dp"
        android:text="@string/mujer"
        android:textColor="@color/genero"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMiercoles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnLunes"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="@color/lunes"
        android:text="@string/lunes"
        android:textColor="@color/txtlunes"
        app:layout_constraintBottom_toTopOf="@+id/btnJueves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregresar" />

    <Button
        android:id="@+id/btnMartes"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/martes"
        android:text="@string/martes"
        android:textColor="@color/txtmartes"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnLunes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMiercoles"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginStart="255dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="@color/miercoles"
        android:text="@string/miercoles"
        android:textColor="@color/txtmiercoles"
        app:layout_constraintBottom_toTopOf="@+id/btnSabado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnJueves"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/jueves"
        android:text="@string/jueves"
        android:textColor="@color/txtjueves"
        app:layout_constraintBottom_toTopOf="@+id/btnDomingo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLunes" />

    <Button
        android:id="@+id/btnViernes"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/viernes"
        android:text="@string/viernes"
        android:textColor="@color/txtviernes"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnJueves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSabado"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginStart="255dp"
        android:layout_marginBottom="179dp"
        android:backgroundTint="@color/sabado"
        android:text="@string/sabado"
        android:textColor="@color/txtsabado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMiercoles" />

    <Button
        android:id="@+id/btnDomingo"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/domingo"
        android:text="@string/domingo"
        android:textColor="@color/txtdomingo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJueves" />

    <Button
        android:id="@+id/btnregresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="77dp"
        android:backgroundTint="@color/buton"
        android:text="@string/regeresa"
        app:layout_constraintBottom_toTopOf="@+id/btnLunes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>