<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoinicio"
    tools:context=".registro_user">

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Registro"
        android:textColor="@color/registro"
        android:textColorLink="@color/registro"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imgLog"
        app:layout_constraintEnd_toEndOf="@+id/imgLog"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/entridatos"
        android:ems="10"
        android:hint="@string/Nombre"
        android:hyphenationFrequency="none"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLog" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/entridatos"
        android:ems="10"
        android:hint="@string/Correo"
        android:hyphenationFrequency="none"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/entridatos"
        android:ems="10"
        android:hint="@string/Edad"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtContraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="181dp"
        android:backgroundTint="@color/entridatos"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdad" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginTop="548dp"
        android:backgroundTint="@color/buton"
        android:text="@string/btnRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLog"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro"
        app:srcCompat="@drawable/log" />

    <Button
        android:id="@+id/btnRegresa"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_marginTop="699dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/registro"
        android:text="Continuar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>